Cambio de plantilla

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,3 @@
 <resources>
-    <string name="app_name">Proyecto_DBP</string>
-    <string name="title_item_detail">Item Detail</string>
+    <string name="app_name">CS2B01 - CHAT</string>
 </resources>
